<resources>
    <string name="app_name">Book</string>

    <!-- nav menu strings -->

    <string name="my_book">Мои книги</string>
    <string name="general_book">Обзор книг</string>

    <string name="bookmark">Закладки</string>

    <!-- button string -->

    <string name="genres">Жанры</string>
    <string name="tags">Теги</string>
    <string name="button_open">Открыть</string>
    <string name="button_closed">Закрыть</string>
    <string name="button_add_book">Добавить книгу</string>
    <string name="download">Скачать</string>

    <!-- input hints -->

    <string name="hintTitle">Название</string>
    <string name="hintAuthor">Авторы</string>
    <string name="hintDescription">Описание</string>
    <string name="hintGenres">Жанры</string>
    <string name="hintRating">Рейтинг</string>
    <string name="hintPopularity">Популярность</string>
    <string name="hintTags">Теги, через запятую</string>
    <string name="hintPath">Выберите файл</string>
    <string name="ok">ОК</string>

    <string name="page_hint">0</string>

    <!-- errors -->
    <string name="error_input_title">Некорректное название книги</string>
    <string name="incorrect_extension">Некорректный формат книги</string>
    <string name="error_input_author">Некорректное имя автора</string>
    <string name="error_input_description">Некорректное описание</string>
    <string name="error_input_genres">Некорректные жанры</string>
    <string name="error_input_tags">Некорректные теги</string>
    <string name="error_input_path">Некорректный путь к файлу</string>

    <string name="permission_file_access_denied">Не получилось разрешить доступ к файлам! Разрешите доступ к файлам в настройках приложения.</string>
    <string name="permission_internet_access_denied">Не получилось разрешить доступ к интернету! Разрешите доступ к интернету в настройках приложения.</string>

    <string name="network_error">Ошибка соедниения с сервером</string>

    <!-- alert -->
    <string name="first_run_change_books_alert_title">Выбор книг</string>
    <string name="first_run_change_books_alert_body">В следующем окне будет доступен выбор файлов для добавления в ваш каталог.</string>

    <!-- other -->
    <string name="page">страница</string>
    <string name="checkbox_share_access">Разрешить другим пользователям скачивать данную книгу</string>

</resources>